--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="43" src="img/demos/transportation-logistic/icons/service-1.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/rodents-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Rodents</h4>
@@ -233,7 +233,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="26" src="img/animal-icons/mosquitoes-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Ants</h4>
@@ -249,7 +249,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="58" height="49" src="img/demos/transportation-logistic/icons/service-3.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="58" height="49" src="img/animal-icons/" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Roaches</h4>
@@ -265,7 +265,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="26" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Tented and tentless termite treatments</h4>
@@ -281,7 +281,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="43" src="img/animal-icons/mosquitoes-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Insect management</h4>
@@ -297,7 +297,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="26" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Reptiles and Snakes</h4>
@@ -313,7 +313,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="26" src="img/animal-icons/bees-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold"> Bees and wasps</h4>
@@ -329,7 +329,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="26" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold"> Raccoons</h4>
