--- a/index.html
+++ b/index.html
@@ -116,23 +116,23 @@
 													<nav class="collapse">
 														<ul class="nav nav-pills" id="mainNav">
 															<li class="dropdown">
-																<a href="demo-transportation-logistic.html" class="nav-link active">
+																<a href="index.html" class="nav-link active">
 																	Home
 																</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-transportation-logistic-about-us.html">
+																<a class="nav-link" href="about-us.html">
 																	About Us
 																</a>
 															</li>
 
 															<li>
-																<a class="nav-link" href="demo-transportation-logistic-services.html">
+																<a class="nav-link" href="services.html">
 																	Services
 																</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-transportation-logistic-contact-us.html">
+																<a class="nav-link" href="contact-us.html">
 																	Contact Us
 																</a>
 															</li>
@@ -217,7 +217,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="90" height="43" src="img/animal-icons/rodents-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="90" height="63" src="img/animal-icons/rodents-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Rodents</h4>
@@ -233,10 +233,10 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Ants</h4>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Ants and Roaches</h4>
 														<p class="mb-2 font-weight-medium text-3">Because of their adaptability, ants can make a living in a wide variety of ecosystems, we can help.</p>
 														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
@@ -249,11 +249,11 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="58" height="49" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="58" height="49" src="img/animal-icons/mosquitoes-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Roaches</h4>
-														<p class="mb-2 font-weight-medium text-3">We follow methods, that when combined, disrupt the roach life cycle, eliminate the current population, and greatly reduce the roach population.</p>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Mosquitos</h4>
+														<p class="mb-2 font-weight-medium text-3">We follow methods, that when combined, disrupt the mosquito life cycle, eliminate the current population, and greatly reduce the roach population.</p>
 														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
@@ -265,7 +265,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/termites-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Tented and tentless termite treatments</h4>
@@ -297,7 +297,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Reptiles and Snakes</h4>
@@ -313,7 +313,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/animal-icons/bees-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/bees-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold"> Bees and wasps</h4>
@@ -329,7 +329,7 @@
 											<div class="card-body p-5">
 												<div class="d-flex flex-row">
 													<div class="pt-2">
-														<img width="70" height="26" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+														<img width="70" height="43" src="img/animal-icons/wildlife-pest-icon.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold"> Raccoons</h4>
