--- a/about-us.html
+++ b/about-us.html
@@ -6,15 +6,15 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Demo Transportation & Logistic | Porto - Multipurpose Website Template</title>	
+		<title>Belle Pest Control | Florida </title>	
 
-		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
-		<meta name="author" content="okler.net">
+		<meta name="keywords" content="Pest Control" />
+		<meta name="description" content="Belle Pest Control Services">
+		<meta name="author" content="Yaunet Hernandez">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="shortcut icon" href="image003.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="image003.png">
 
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
