--- a/index.html
+++ b/index.html
@@ -451,30 +451,30 @@
 									<div>
 										<div class="testimonial testimonial-style-5 px-lg-5 mx-lg-5">
 											<blockquote>
-												<p class="mb-0 line-height-8 font-weight-medium text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
+												<p class="mb-0 line-height-8 font-weight-medium text-4">We have been doing business together now for more than 8 years. Many termite companies have come and gone but you have been here and will always be here because of the time and care you take with your customers. I am proud that I recommended you, and my client couldn’t be happier.</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Carolina Cabrera </strong><span>Attorney &amp; Founder - The Law Offices of Carolina Cabrera</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Name</strong> <span>Residential Customer &amp; </span></p>
 											</div>
 										</div>
 									</div>
 									<div>
 										<div class="testimonial testimonial-style-5 px-lg-5 mx-lg-5">
 											<blockquote>
-												<p class="mb-0 line-height-8 font-weight-medium text-4">Consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
+												<p class="mb-0 line-height-8 font-weight-medium text-4">We have been utilizing the fine services of Belle Pest Control for 6 years. Operating as a restaurant in the Miami Beach area, we are under constant pressure to keep our facility pest free. Belle Pest control has always done a wonderful job helping us accomplish this. The office staff is always friendly and helpful and the technicians are always prompt, courteous, and well educated about their work. We highly recommend Belle Pest Control to all our clients for their at home pest control needs.</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Jose L. Lago</strong><span>CEO &amp; Attorney &amp; Founder - The Law Offices of Jose L. Lago</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Name</strong><span> Commerical Customer &amp;</span></p>
 											</div>
 										</div>
 									</div>
 									<div>
 										<div class="testimonial testimonial-style-5 px-lg-5 mx-lg-5">
 											<blockquote>
-												<p class="mb-0 line-height-8 font-weight-medium text-4">Adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
+												<p class="mb-0 line-height-8 font-weight-medium text-4">Thank you for the wonderful service your Company has provided to my Family. Specifically, my Mother had serious bug problems at her home, and your business responded immediately and in such a professional manner.</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Adrian Alpizar</strong><span>Owner &amp; Manager - Beverly Hills Apartments</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Name</strong> <span> Residential Customer&amp; </span></p>
 											</div>
 										</div>
 									</div>
