--- a/contact-us.html
+++ b/contact-us.html
@@ -198,7 +198,7 @@
                                 </div>
                                 <div class="row row-gutter-sm">
                                     <div class="form-group col-lg-6 mb-4">
-                                        <input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" name="email" id="email" required placeholder="Your Name">
+                                        <input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" name="email" id="email" required placeholder="Your Email">
                                     </div>
                                     <div class="form-group col-lg-6 mb-4">
                                         <input type="text" value="" data-msg-required="Please enter the subject." maxlength="100" class="form-control" name="subject" id="subject" required placeholder="Subject">
